testdata/baselines/reference/submodule/conformance/conflictingCommonJSES2015Exports.errors.txt
bug24934.js(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
bug24934.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== bug24934.js (2 errors) ====
    export function abc(a, b, c) { return 5; }
    module.exports = { abc };
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
==== use.js (0 errors) ====
    import { abc } from './bug24934';
    abc(1, 2, 3);
    